Fixed spacing around pingbacks not being styled the same as comments

--- a/scss/_08-comments.scss
+++ b/scss/_08-comments.scss
@@ -32,7 +32,7 @@
   }
 }
 
-.comment + .comment {
+.comment-list > * + * {
   border-top: var(--border-width) dashed var(--color-gray);
   padding-block-start: 2em;
 }
